[package]
name = "iiif"
version = "0.1.0"
authors = ["Mitchell <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"
description = "A client library for the International Image Interoperability Framework (IIIF)"
repository = "https://github.com/mitchellberry/iiif"
license = "Apache-2.0"
readme = "readme.md"

[dependencies]
bytes = "0.5.4"
reqwest = { version = "0.10.1", features = ["json"] }
tokio = {version = "0.2.4",  features=["macros"] } 
serde = { version = "^1.0", features = ["derive"] } 
serde_json = "^1.0"