[package]
name = "iiif"
version = "0.1.1"
authors = ["Mitchell Berry <17392435+MitchellBerry@users.noreply.github.com>"]
edition = "2018"
description = "A client library for the International Image Interoperability Framework (IIIF)"
repository = "https://github.com/mitchellberry/iiif"
license = "Apache-2.0"
readme = "readme.md"

[dependencies]
bytes = "1.2.1"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = {version = "1.20.1",  features=["macros"] } 
serde = { version = "^1.0", features = ["derive"] } 
serde_json = "^1.0"
